# langgraph

codex_otc_review/: README.md  pyproject.toml
codex_otc_review/codex_otc_review/: __init__.py  config.py  prompts.py  reporting.py  runner.py
codex_otc_review/tests/: test_cli.py  test_config.py  test_reporting.py  test_runner.py
docs/superpowers/specs/: 2026-04-01-codex-app-server-node-design.md  2026-04-01-codex-otc-review-scenario-design.md
libs/prebuilt/langgraph/prebuilt/: __init__.py  codex_app_server.py
libs/prebuilt/tests/: test_codex_app_server_node.py
